Notification z-index fix

--- a/public/style.css
+++ b/public/style.css
@@ -1038,6 +1038,7 @@ h3 {
   align-items: center;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
+  z-index: 1;
 }
 
 .notification-content p {
